--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -38,10 +38,10 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        set -o pipefail
         aws lambda update-function-code \
           --function-name lambda_function_bedrock \
           --zip-file fileb://function.zip \
+          --region us-east-1 \
           --debug 2>&1 | tee debug.log
         echo "Debug log:"
         cat debug.log
