--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -51,13 +51,18 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
+        set -o pipefail
         aws lambda invoke \
           --function-name lambda_function_bedrock \
           --payload '{}' \
           --log-type Tail \
-          output.txt > result.log
+          output.txt 2> error.log | tee result.log
+        echo "Lambda function logs:"
         cat result.log
+        echo "Lambda function output:"
         cat output.txt
+        echo "Lambda function errors (if any):"
+        cat error.log
 
   test:
     needs: deploy
