--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -46,24 +46,43 @@ jobs:
         echo "Debug log:"
         cat debug.log
 
-    - name: Run Lambda function test
+    - name: Run Lambda function test - Step 1: Invoke Lambda
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
         set -o pipefail
+        echo "Invoking Lambda function..."
         aws lambda invoke \
           --function-name lambda_function_bedrock \
           --payload '{\"body\": \"{\\\"model_id\\\": \\\"meta.llama3-70b-instruct-v1:0\\\", \\\"params\\\": {\\\"prompt\\\": \\\"Which mode are you?\\\", \\\"max_gen_len\\\": 512, \\\"temperature\\\": 0.5, \\\"top_p\\\": 0.9}}\"}' \
           --log-type Tail \
           --region us-east-1 \
           output.txt 2> error.log | tee result.log
-        echo "Lambda function logs:"
-        cat result.log
-        echo "Lambda function output:"
-        cat output.txt
-        echo "Lambda function errors (if any):"
-        cat error.log
+
+    - name: Run Lambda function test - Step 2: Check Invocation Results
+      run: |
+        echo "Checking Lambda function logs..."
+        if [ -s result.log ]; then
+          cat result.log
+        else
+          echo "No result.log generated"
+        fi
+        
+        echo "Checking Lambda function output..."
+        if [ -s output.txt ]; then
+          cat output.txt
+        else
+          echo "No output.txt generated"
+        fi
+        
+        echo "Checking Lambda function errors..."
+        if [ -s error.log ]; then
+          echo "Errors detected:"
+          cat error.log
+        else
+          echo "No error.log generated"
+        fi
 
   test:
     needs: deploy
@@ -80,6 +99,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run unit tests
+    - name: Run unit tests with detailed output
       run: |
-        pytest
+        echo "Running unit tests with pytest..."
+        pytest --verbose --capture=tee-sys --tb=short
