--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -46,7 +46,7 @@ jobs:
           echo "Debug log:"
           cat debug.log
 
-      - name: Run Lambda function test - Step 1: Invoke Lambda
+      - name: Run Lambda function test - Step 1 -> Invoke Lambda
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -60,7 +60,7 @@ jobs:
             --region us-east-1 \
             output.txt 2> error.log | tee result.log
 
-      - name: Run Lambda function test - Step 2: Check Invocation Results
+      - name: Run Lambda function test - Step 2 -> Check Invocation Results
         run: |
           echo "Checking Lambda function logs..."
           if [ -s result.log ]; then
