--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -4,10 +4,15 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'terraform/**'
+      - '.github/workflows/**'
   pull_request:
     branches:
       - main
-
+    paths-ignore:
+      - 'terraform/**'
+      - '.github/workflows/**'
 jobs:
   deploy:
     runs-on: ubuntu-latest
