--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -14,9 +14,18 @@ jobs:
         uses: hashicorp/setup-terraform@v2
 
       - name: Initialize Terraform
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
         run: terraform init
         working-directory: ./terraform
 
       - name: Destroy Resources
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
         run: terraform destroy -auto-approve
         working-directory: ./terraform
+
