--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -10,7 +10,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
-      
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -18,8 +18,13 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
 
+      - name: Extract Project Name
+        run: echo "PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)" >> $GITHUB_ENV
+
       - name: Initialize Terraform
-        run: terraform init
+        run: terraform init -backend-config="key=${PROJECT_NAME}/terraform.tfstate" \
+                            -backend-config="bucket=glpi-bedrock-project-terraform-state" \
+                            -backend-config="region=${AWS_REGION}"
         working-directory: ./terraform
 
       - name: Validate Terraform Configuration
