--- a/.github/workflows/setup-env.yml
+++ b/.github/workflows/setup-env.yml
@@ -11,10 +11,12 @@ on:
 jobs:
   set_env:
     runs-on: ubuntu-latest
-    outputs:
-      S3_BUCKET: glpi-bedrock-project-terraform-state
-      S3_KEY_PATH: path/to/${{ github.repository }}
     steps:
-      - name: Set Outputs
-        run: echo "S3_BUCKET=glpi-bedrock-project-terraform-state" >> $GITHUB_ENV
-        run: echo "S3_KEY_PATH=path/to/${{ github.repository }}" >> $GITHUB_ENV
+      - name: Extract Project Name
+        run: echo "PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)" >> $GITHUB_ENV
+
+      - name: Set Workflow Outputs
+        id: set_outputs
+        run: |
+          echo "::set-output name=S3_BUCKET::glpi-bedrock-project-terraform-state"
+          echo "::set-output name=S3_KEY_PATH::${PROJECT_NAME}"
