--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -4,39 +4,38 @@ on:
   workflow_dispatch:
 
 jobs:
+  setup_env:
+    uses: ./.github/workflows/setup-env.yml
+
   create:
+    needs: setup_env
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
+      S3_BUCKET: ${{ needs.setup_env.outputs.S3_BUCKET }}
+      S3_KEY_PATH: ${{ needs.setup_env.outputs.S3_KEY_PATH }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-
-      - name: Extract Project Name
-        run: echo "PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)" >> $GITHUB_ENV
-
       - name: Initialize Terraform
         run: |
           terraform init \
-            -backend-config="key=${PROJECT_NAME}/terraform.tfstate" \
-            -backend-config="bucket=glpi-bedrock-project-terraform-state" \
+            -backend-config="key=${S3_KEY_PATH}/terraform.tfstate" \
+            -backend-config="bucket=${S3_BUCKET}" \
             -backend-config="region=${AWS_REGION}"
         working-directory: ./terraform
 
-      - name: Validate Terraform Configuration
-        run: terraform validate
-        working-directory: ./terraform
-
-      - name: Plan Terraform Deployment
-        run: terraform plan -out=terraform.plan
-        working-directory: ./terraform
-
       - name: Apply Terraform to create resources
-        run: terraform apply -auto-approve terraform.plan
+        run: terraform apply -auto-approve
         working-directory: ./terraform
+
+      - name: Save API Endpoint to S3
+        run: |
+          echo $API_ENDPOINT > api_endpoint.txt
+          aws s3 cp api_endpoint.txt s3://${S3_BUCKET}/${S3_KEY_PATH}/api_endpoint.txt
+        env:
+          API_ENDPOINT: ${{ steps.create_output.outputs.api_endpoint }}
