--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -4,28 +4,28 @@ on:
   workflow_dispatch:
 
 jobs:
+  setup_env:
+    uses: ./.github/workflows/setup-env.yml
+
   delete:
+    needs: setup_env
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
+      S3_BUCKET: ${{ needs.setup_env.outputs.S3_BUCKET }}
+      S3_KEY_PATH: ${{ needs.setup_env.outputs.S3_KEY_PATH }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-
-      - name: Extract Project Name
-        run: echo "PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)" >> $GITHUB_ENV
-
       - name: Initialize Terraform
         run: |
           terraform init \
-            -backend-config="key=${PROJECT_NAME}/terraform.tfstate" \
-            -backend-config="bucket=glpi-bedrock-project-terraform-state" \
+            -backend-config="key=${S3_KEY_PATH}/terraform.tfstate" \
+            -backend-config="bucket=${S3_BUCKET}" \
             -backend-config="region=${AWS_REGION}"
         working-directory: ./terraform
 
