--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -13,9 +13,20 @@ on:
     paths-ignore:
       - 'terraform/**'
       - '.github/workflows/**'
+
 jobs:
+  setup_env:
+    uses: ./.github/workflows/setup-env.yml
+
   deploy:
+    needs: setup_env
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      S3_BUCKET: ${{ needs.setup_env.outputs.S3_BUCKET }}
+      S3_KEY_PATH: ${{ needs.setup_env.outputs.S3_KEY_PATH }}
 
     steps:
       - name: Checkout code
@@ -35,14 +46,11 @@ jobs:
           cd ..
 
       - name: Deploy Lambda function
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws lambda update-function-code \
             --function-name lambda_function_bedrock \
             --zip-file fileb://function.zip \
-            --region us-east-1 \
+            --region $AWS_REGION \
             --debug 2>&1 | tee debug.log
           echo "Debug log:"
           cat debug.log
@@ -50,24 +58,32 @@ jobs:
   test:
     needs: deploy
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      S3_BUCKET: ${{ needs.setup_env.outputs.S3_BUCKET }}
+      S3_KEY_PATH: ${{ needs.setup_env.outputs.S3_KEY_PATH }}
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'  # Use the Python version your script requires
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'  # Use the Python version your script requires
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
-    - name: Run Lambda Function Test
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        python ./src/test/test_lambda_function.py
+      - name: Retrieve API Endpoint from S3
+        run: |
+          aws s3 cp s3://${S3_BUCKET}/${S3_KEY_PATH}/api_endpoint.txt .
+          echo "API_ENDPOINT=$(cat api_endpoint.txt)" >> $GITHUB_ENV
+
+      - name: Run Lambda Function Test
+        run: |
+          python ./src/test/test_lambda_function.py --endpoint $API_ENDPOINT
