--- a/.github/workflows/setup-env.yml
+++ b/.github/workflows/setup-env.yml
@@ -7,16 +7,46 @@ on:
         description: 'S3 Bucket Name'
       S3_KEY_PATH:
         description: 'S3 Key Path'
+      API_GATEWAY_NAME:
+        description: 'API Gateway Name'
+      API_STAGE_NAME:
+        description: 'API Stage Name'
 
 jobs:
   set_env:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Extract Project Name
-        run: echo "PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)" >> $GITHUB_ENV
+        id: extract_project_name
+        run: |
+          PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)
+          echo "PROJECT_NAME=$PROJECT_NAME" >> $GITHUB_ENV
+
+      - name: Initialize Terraform
+        run: terraform init -input=false
+        working-directory: ./terraform
+
+      - name: Extract Variables from Terraform
+        id: extract_vars
+        run: |
+          API_GATEWAY_NAME=$(terraform output -raw api_gateway_name)
+          API_STAGE_NAME=$(terraform output -raw api_stage_name)
+          
+          echo "API_GATEWAY_NAME=$API_GATEWAY_NAME" >> $GITHUB_ENV
+          echo "API_STAGE_NAME=$API_STAGE_NAME" >> $GITHUB_ENV
+        working-directory: ./terraform
 
       - name: Set Workflow Outputs
         id: set_outputs
         run: |
-          echo "::set-output name=S3_BUCKET::glpi-bedrock-project-terraform-state"
-          echo "::set-output name=S3_KEY_PATH::${PROJECT_NAME}"
+          S3_BUCKET="glpi-bedrock-project-terraform-state"
+          S3_KEY_PATH="${PROJECT_NAME}"
+
+          echo "::set-output name=S3_BUCKET::$S3_BUCKET"
+          echo "::set-output name=S3_KEY_PATH::$S3_KEY_PATH"
+          echo "::set-output name=API_GATEWAY_NAME::$API_GATEWAY_NAME"
+          echo "::set-output name=API_STAGE_NAME::$API_STAGE_NAME"
+
