--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Load Environment Variables
+        run: source .github/workflows/env.sh
+
       - name: Initialize Terraform
         run: |
           terraform init \
