--- a/.github/workflows/setup-env.yml
+++ b/.github/workflows/setup-env.yml
@@ -1,52 +1,31 @@
 name: Setup Environment
-
 on:
   workflow_call:
-
 jobs:
   set_env:
     runs-on: ubuntu-latest
     outputs:
       S3_BUCKET: ${{ steps.set_outputs.outputs.S3_BUCKET }}
       S3_KEY_PATH: ${{ steps.set_outputs.outputs.S3_KEY_PATH }}
-      API_GATEWAY_NAME: ${{ steps.set_outputs.outputs.API_GATEWAY_NAME }}
-      API_STAGE_NAME: ${{ steps.set_outputs.outputs.API_STAGE_NAME }}
+      AWS_REGION: ${{ steps.set_outputs.outputs.AWS_REGION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Source environment variables from env.sh
         id: source_env
         run: |
           source .github/workflows/env.sh
           echo "AWS_REGION=$AWS_REGION" >> $GITHUB_ENV
           echo "S3_BUCKET=$S3_BUCKET" >> $GITHUB_ENV
-
       - name: Extract Project Name
         id: extract_project_name
         run: |
           PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)
           echo "PROJECT_NAME=$PROJECT_NAME" >> $GITHUB_ENV
-
-      - name: Initialize Terraform
-        run: terraform init -input=false
-        working-directory: ./terraform
-
-      - name: Extract Variables from Terraform
-        id: extract_vars
-        run: |
-          API_GATEWAY_NAME=$(terraform output -raw api_gateway_name)
-          API_STAGE_NAME=$(terraform output -raw api_stage_name)
-
-          echo "API_GATEWAY_NAME=$API_GATEWAY_NAME" >> $GITHUB_ENV
-          echo "API_STAGE_NAME=$API_STAGE_NAME" >> $GITHUB_ENV
-
       - name: Set Workflow Outputs
         id: set_outputs
         run: |
           S3_KEY_PATH="${PROJECT_NAME}"
-
           echo "::set-output name=S3_BUCKET::$S3_BUCKET"
           echo "::set-output name=S3_KEY_PATH::$S3_KEY_PATH"
-          echo "::set-output name=API_GATEWAY_NAME::$API_GATEWAY_NAME"
-          echo "::set-output name=API_STAGE_NAME::$API_STAGE_NAME"
+          echo "::set-output name=AWS_REGION::$AWS_REGION"
