--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -6,44 +6,39 @@ on:
 jobs:
   create:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Source Environment Variables from env.sh
-        run: |
-          source .github/workflows/env.sh
-          echo "AWS_REGION=$AWS_REGION" >> $GITHUB_ENV
-          echo "S3_BUCKET=$S3_BUCKET" >> $GITHUB_ENV
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
 
-      - name: Debugging
-        run: |
-          echo "AWS_REGION: $AWS_REGION"
-          echo "S3_BUCKET: $S3_BUCKET"
-      
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: $AWS_REGION
+      - name: Source Environment Variables
+        run: source .github/workflows/env.sh
+
+      - name: Extract Project Name
+        run: echo "PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)" >> $GITHUB_ENV
 
       - name: Initialize Terraform
         run: |
           terraform init \
-            -backend-config="key=${S3_KEY_PATH}/terraform.tfstate" \
+            -backend-config="key=${PROJECT_NAME}/terraform.tfstate" \
             -backend-config="bucket=${S3_BUCKET}" \
-            -backend-config="region=${AWS_REGION}"  \
-            -input=false
+            -backend-config="region=${AWS_REGION}"
         working-directory: ./terraform
-      
+
+      - name: Validate Terraform Configuration
+        run: terraform validate
+        working-directory: ./terraform
+
+      - name: Plan Terraform Deployment
+        run: terraform plan -out=terraform.plan
+        working-directory: ./terraform
+
       - name: Apply Terraform to create resources
-        run: terraform apply -auto-approve
-        working-directory: ./terraform
-      
-      - name: Save API Endpoint to S3
-        run: |
-          API_ENDPOINT=$(terraform output -raw api_endpoint)
-          echo $API_ENDPOINT > api_endpoint.txt
-          aws s3 cp api_endpoint.txt s3://${S3_BUCKET}/${S3_KEY_PATH}/api_endpoint.txt
+        run: terraform apply -auto-approve terraform.plan
         working-directory: ./terraform
