--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -17,20 +17,29 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
 
-      - name: Source Environment Variables
+      - name: Source Environment Variables from env.sh
         run: |
           source .github/workflows/env.sh
           echo "S3_BUCKET=$S3_BUCKET" >> $GITHUB_ENV
           echo "AWS_REGION=$AWS_REGION" >> $GITHUB_ENV
         shell: bash
 
-      - name: Debug Environment Variables
+      - name: Source Variables from terraform.tfvars
+        id: source_tfvars
         run: |
-          echo "S3_BUCKET=${S3_BUCKET}"
-          echo "AWS_REGION=${AWS_REGION}"
+          # Read variables from terraform.tfvars
+          export $(grep -v '^#' terraform.tfvars | xargs)
 
-      - name: Extract Project Name
-        run: echo "PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)" >> $GITHUB_ENV
+          # Save the variables to GitHub environment
+          echo "LAMBDA_FUNCTION_NAME=${lambda_function_name}" >> $GITHUB_ENV
+          echo "API_GATEWAY_NAME=${api_gateway_name}" >> $GITHUB_ENV
+          echo "API_STAGE_NAME=${api_stage_name}" >> $GITHUB_ENV
+
+      - name: Debug Variables from terraform.tfvars
+        run: |
+          echo "Lambda Function Name: ${LAMBDA_FUNCTION_NAME}"
+          echo "API Gateway Name: ${API_GATEWAY_NAME}"
+          echo "API Stage Name: ${API_STAGE_NAME}"
 
       - name: Initialize Terraform
         run: |
