--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -1,10 +1,5 @@
-name: Delete Resources
-
-on:
-  workflow_dispatch:
-
 jobs:
-  delete:
+  create:
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -24,22 +19,16 @@ jobs:
           echo "AWS_REGION=$AWS_REGION" >> $GITHUB_ENV
         shell: bash
 
-      - name: Source Variables from terraform.tfvars
-        id: source_tfvars
+      - name: Extract Project Name
         run: |
-          # Read variables from terraform.tfvars
-          export $(grep -v '^#' terraform.tfvars | xargs)
+          PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)
+          echo "PROJECT_NAME=${PROJECT_NAME}" >> $GITHUB_ENV
 
-          # Save the variables to GitHub environment
-          echo "LAMBDA_FUNCTION_NAME=${lambda_function_name}" >> $GITHUB_ENV
-          echo "API_GATEWAY_NAME=${api_gateway_name}" >> $GITHUB_ENV
-          echo "API_STAGE_NAME=${api_stage_name}" >> $GITHUB_ENV
-
-      - name: Debug Variables from terraform.tfvars
+      - name: Debug Environment Variables
         run: |
-          echo "Lambda Function Name: ${LAMBDA_FUNCTION_NAME}"
-          echo "API Gateway Name: ${API_GATEWAY_NAME}"
-          echo "API Stage Name: ${API_STAGE_NAME}"
+          echo "PROJECT_NAME=${PROJECT_NAME}"
+          echo "S3_BUCKET=${S3_BUCKET}"
+          echo "AWS_REGION=${AWS_REGION}"
 
       - name: Initialize Terraform
         run: |
@@ -47,8 +36,4 @@ jobs:
             -backend-config="key=${PROJECT_NAME}/terraform.tfstate" \
             -backend-config="bucket=${S3_BUCKET}" \
             -backend-config="region=${AWS_REGION}"
-        working-directory: ./terraform
-
-      - name: Destroy Terraform Resources
-        run: terraform destroy -auto-approve
-        working-directory: ./terraform
+        shell: /usr/bin/bash -e {0}
