--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -1,5 +1,10 @@
+name: Delete Resources
+
+on:
+  workflow_dispatch:
+
 jobs:
-  create:
+  delete:
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -24,11 +29,25 @@ jobs:
           PROJECT_NAME=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)
           echo "PROJECT_NAME=${PROJECT_NAME}" >> $GITHUB_ENV
 
+      - name: Source Variables from terraform.tfvars
+        id: source_tfvars
+        run: |
+          # Read variables from terraform.tfvars
+          export $(grep -v '^#' terraform.tfvars | xargs)
+
+          # Save the variables to GitHub environment
+          echo "LAMBDA_FUNCTION_NAME=${lambda_function_name}" >> $GITHUB_ENV
+          echo "API_GATEWAY_NAME=${api_gateway_name}" >> $GITHUB_ENV
+          echo "API_STAGE_NAME=${api_stage_name}" >> $GITHUB_ENV
+
       - name: Debug Environment Variables
         run: |
           echo "PROJECT_NAME=${PROJECT_NAME}"
           echo "S3_BUCKET=${S3_BUCKET}"
           echo "AWS_REGION=${AWS_REGION}"
+          echo "Lambda Function Name: ${lambda_function_name}"
+          echo "API Gateway Name: ${api_gateway_name}"
+          echo "API Stage Name: ${api_stage_name}"
 
       - name: Initialize Terraform
         run: |
@@ -37,3 +56,7 @@ jobs:
             -backend-config="bucket=${S3_BUCKET}" \
             -backend-config="region=${AWS_REGION}"
         shell: /usr/bin/bash -e {0}
+
+      - name: Destroy Terraform Resources
+        run: terraform destroy -auto-approve
+        working-directory: ./terraform
