--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.0  # Specify the Terraform version you need
 
       - name: Source Environment Variables from env.sh
         run: |
@@ -55,12 +57,6 @@ jobs:
             -backend-config="bucket=${S3_BUCKET}" \
             -backend-config="region=${AWS_REGION}"
         shell: bash
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TERRAFORM_CLI_PATH: /home/runner/work/_temp/terraform-cli
-          S3_BUCKET: ${{ env.S3_BUCKET }}
-          AWS_REGION: ${{ env.AWS_REGION }}
 
       - name: Validate Terraform Configuration
         run: terraform validate
